# Robotics_ROS2

./: .gitignore  README.md  gitignore.txt
Prog_1_turtle_controller/: README.md  keyboard_control.py
R_bot/: requirements.txt
R_bot/firmware/motor_controller/: L293D to Arduino Mega Wiring Diagram.txt
R_bot/hardware/: bom.csv
R_bot/ros2_ws/src/robot_description/models/: model.sdf
R_bot/ros2_ws/src/robot_description/worlds/: mecanum_world.sdf
R_bot/ros2_ws/src/robot_perception/: package.xml  setup.cfg
R_bot/ros2_ws/src/robot_perception/robot_perception/: camera_node.py  yolo_node.py
docs/: architecture.txt
firmware/motor_controller/: L298N to Arduino Mega Wiring Diagram.txt  mecanum_controller.ino
hardware/: bom.csv
hardware/3d_models/: model_1.txt
ros2_ws/: .gitignore
ros2_ws/src/robot_bringup/: package.xml  setup.py
ros2_ws/src/robot_bringup/robot_bringup/: mecanum_driver.py
ros2_ws/src/robot_description/models/: model.sdf
ros2_ws/src/robot_description/worlds/: mecanum_world.sdf
ros2_ws/src/robot_perception/: setup.py
